--- a/Calculator/src/tw/edu/npu/mis/CalculatorView.fxml
+++ b/Calculator/src/tw/edu/npu/mis/CalculatorView.fxml
@@ -18,120 +18,43 @@
     </columnConstraints>
     <rowConstraints>
         <RowConstraints prefHeight="100" vgrow="ALWAYS" />
+      <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="ALWAYS" />
+      <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="ALWAYS" />
         <RowConstraints prefHeight="60" vgrow="ALWAYS" />
         <RowConstraints prefHeight="60" vgrow="ALWAYS" />
         <RowConstraints prefHeight="60" vgrow="ALWAYS" />
         <RowConstraints prefHeight="60" vgrow="ALWAYS" />
         <RowConstraints prefHeight="60" vgrow="ALWAYS" />
     </rowConstraints>
-   <children>
-      <Label fx:id="display" alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" textOverrun="CLIP" GridPane.columnIndex="0" GridPane.columnSpan="4">
-         <font>
-            <Font size="42.0" />
-         </font>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-      </Label>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleClearEntry" text="CE" textFill="#e8e8e8" GridPane.rowIndex="1">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleClear" text="C" textFill="#e8e8e8" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleBackspace" text="⌫" textFill="#e8e8e8" GridPane.columnIndex="2" GridPane.rowIndex="1">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleOver" text="÷" textFill="#e8e8e8" GridPane.columnIndex="3" GridPane.rowIndex="1">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleTimes" text="×" textFill="#e8e8e8" GridPane.columnIndex="3" GridPane.rowIndex="2">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleMinus" text="-" textFill="#e8e8e8" GridPane.columnIndex="3" GridPane.rowIndex="3">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handlePlus" text="+" textFill="#e8e8e8" GridPane.columnIndex="3" GridPane.rowIndex="4">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleEqual" text="=" textFill="#e8e8e8" GridPane.columnIndex="3" GridPane.rowIndex="5">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleDot" text="." textFill="#e8e8e8" GridPane.columnIndex="2" GridPane.rowIndex="5">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handlePlusMinus" text="±" textFill="#e8e8e8" GridPane.rowIndex="5">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleNumber0" text="0" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="5">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleNumber1" text="1" textFill="WHITE" GridPane.rowIndex="4">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleNumber2" text="2" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="4">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleNumber3" text="3" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="4">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleNumber4" text="4" textFill="WHITE" GridPane.rowIndex="3">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleNumber5" text="5" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="3">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleNumber6" text="6" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="3">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleNumber7" text="7" textFill="WHITE" GridPane.rowIndex="2">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleNumber8" text="8" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="2">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleNumber9" text="9" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="2">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-   </children>
+    <children>
+        <Label fx:id="display" alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" textOverrun="CLIP" GridPane.columnIndex="0" GridPane.columnSpan="4" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleClearEntry" styleClass="alpha-button" text="CE" GridPane.rowIndex="3" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleClear" styleClass="alpha-button" text="C" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleBackspace" text="⌫" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleOver" text="÷" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleTimes" text="×" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleMinus" text="-" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handlePlus" text="+" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleEqual" text="=" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleDot" text="." GridPane.columnIndex="2" GridPane.rowIndex="7" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handlePlusMinus" text="±" textFill="#e8e8e8" GridPane.rowIndex="7" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleNumber0" styleClass="digit-button" text="0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleNumber1" styleClass="digit-button" text="1" GridPane.rowIndex="6" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleNumber2" styleClass="digit-button" text="2" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleNumber3" styleClass="digit-button" text="3" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleNumber4" styleClass="digit-button" text="4" GridPane.rowIndex="5" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleNumber5" styleClass="digit-button" text="5" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleNumber6" styleClass="digit-button" text="6" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleNumber7" styleClass="digit-button" text="7" GridPane.rowIndex="4" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleNumber8" styleClass="digit-button" text="8" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleNumber9" styleClass="digit-button" text="9" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleMemClear" styleClass="alpha-button" text="MC" GridPane.rowIndex="1" />
+      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleMemRecall" styleClass="alpha-button" text="MR" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleMemPlus" styleClass="alpha-button" text="M+" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleMemMinus" styleClass="alpha-button" text="M-" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleMemSet" styleClass="alpha-button" text="MS" GridPane.rowIndex="2" />
+      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleSqrt" styleClass="alpha-button" text="√" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handlePercent" styleClass="alpha-button" text="\%" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleReciprocal" styleClass="alpha-button" text="1/x" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+    </children>
 </GridPane>
